Contrast fixes for a11y

--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -27,7 +27,7 @@
   opacity: .15;
 
   &.shade-gradient {
-    background: linear-gradient(to bottom, rgba(#122030, .44) 0%, rgba(#555, .1) 50%, rgba(#122030, .0) 100%);
+    background: linear-gradient(to bottom, rgba(#122030, .6) 0%, rgba(#555, .2) 50%, rgba(#122030, .0) 100%);
     opacity: 1;
   }
 }
